# Iridium-Assembler

./: .gitignore  README.md
Iridium_Assembler/: Cargo.toml
Iridium_Assembler/src/: main.rs
Iridium_Assembler/test_files/: test_duplicate_label.asm  test_file_bios.asm  test_fill_invalid_int.asm  test_invalid_RRR.asm  test_invalid_syscall_code.asm  test_label_operands.asm  test_label_table_generation.asm  test_line_vec_gen.asm  test_non_ascii_fill.asm  test_signed_imm_too_large.asm  test_signed_imm_too_small.asm  test_space_sub.asm  test_unsigned_imm_too_small.asm  test_valid_instrs.asm  test_valid_pseudo_subs.asm  test_write_to_zero_reg.asm
