[package]
name = "iridium_assembler"
version = "1.0.0"
authors = ["Dominic P. Thorpe <d.thorpe3@lancaster.ac.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
ascii_converter = "0.3.0"
